--- a/src/sample/system.fxml
+++ b/src/sample/system.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.SystemController">
    <children>
       <SplitPane layoutX="7.0" layoutY="35.0" prefHeight="458.0" prefWidth="229.0">
          <items>
@@ -18,9 +18,9 @@
       </SplitPane>
       <SplitPane layoutX="243.0" layoutY="68.0" prefHeight="425.0" prefWidth="549.0">
          <items>
-            <TableView prefHeight="200.0" prefWidth="200.0">
+            <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0">
               <columns>
-                <TableColumn fx:id="columnChoice" editable="false" prefWidth="25.0" text="" />
+                  <TableColumn fx:id="columnRadio" prefWidth="25.0" />
                 <TableColumn fx:id="columnName" prefWidth="319.0" text="Name" />
                 <TableColumn fx:id="columnSize" prefWidth="75.0" text="Size" />
                 <TableColumn fx:id="columnTime" prefWidth="130.0" text="Modify Time" />
