--- a/src/sample/system.fxml
+++ b/src/sample/system.fxml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
-<?import java.lang.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TreeView?>
+<?import javafx.scene.layout.Pane?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.SystemController">
+<Pane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.SystemController">
    <children>
       <SplitPane layoutX="7.0" layoutY="35.0" prefHeight="458.0" prefWidth="229.0">
          <items>
@@ -45,20 +47,8 @@
                      <!--<MenuItem fx:id="showDetails" mnemonicParsing="false" onAction="#showDetails" text="Show Details" />-->
                  <!--</items>-->
              <!--</Menu>-->
-            <Menu mnemonicParsing="false" text="Sort">
-               <items>
-                  <MenuItem fx:id="sortByName" mnemonicParsing="false" onAction="#sortByName" text="By Name" />
-                   <!--<MenuItem fx:id="sortByType" mnemonicParsing="false" onAction="#sortByType" text="By Type" />-->
-                   <MenuItem fx:id="sortBySize" mnemonicParsing="false" onAction="#sortBySize" text="By Size" />
-                   <MenuItem fx:id="sortByModifyTime" mnemonicParsing="false" onAction="#sortByModifyTime" text="By Modify Time" />
-               </items>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Help">
-               <items>
-                   <MenuItem mnemonicParsing="false"  text="Help" />
-                  <MenuItem mnemonicParsing="false"  text="About" />
-               </items>
-            </Menu>
+
+
          </menus>
       </MenuBar>
       <TextField fx:id="currentPathText" editable="false" layoutX="348.0" layoutY="35.0" prefHeight="27.0" prefWidth="444.0" />
