--- a/src/sample/system.fxml
+++ b/src/sample/system.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -8,16 +9,11 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TreeView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
 <Pane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.SystemController">
    <children>
-      <SplitPane layoutX="7.0" layoutY="35.0" prefHeight="458.0" prefWidth="229.0">
-         <items>
-            <TreeView fx:id="treeView" prefHeight="444.0" prefWidth="227.0" />
-         </items>
-      </SplitPane>
       <SplitPane layoutX="243.0" layoutY="68.0" prefHeight="425.0" prefWidth="549.0">
          <items>
             <TableView fx:id="tableView" prefHeight="200.0" prefWidth="200.0">
@@ -53,5 +49,10 @@
       </MenuBar>
       <TextField fx:id="currentPathText" editable="false" layoutX="348.0" layoutY="35.0" prefHeight="27.0" prefWidth="444.0" />
       <Label layoutX="249.0" layoutY="40.0" text="Current Path : " />
+      <AnchorPane layoutY="62.0" prefHeight="316.0" prefWidth="240.0">
+         <children>
+            <Button fx:id="back" layoutX="34.0" layoutY="24.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="116.0" text="返回上一级" />
+         </children>
+      </AnchorPane>
    </children>
 </Pane>
