--- a/src/sample/file.fxml
+++ b/src/sample/file.fxml
@@ -1,31 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.FileController">
+<AnchorPane prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.FileController">
    <children>
-      <MenuBar prefHeight="31.0" prefWidth="800.0">
-         <menus>
-            <Menu mnemonicParsing="false" text="File">
-               <items>
-                   <MenuItem fx:id="detail" mnemonicParsing="false" onAction="#detail" text="Detail" />
-                  <MenuItem fx:id="save" mnemonicParsing="false" onAction="#save" text="Save" />
-                  <MenuItem fx:id="delete" mnemonicParsing="false" onAction="#delete" text="Delete" />
-                  <MenuItem fx:id="close" mnemonicParsing="false" onAction="#close" text="Close" />
-               </items>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Authority">
-               <items>
-                  <MenuItem fx:id="readonly" mnemonicParsing="false" onAction="#readonly" text="readonly" />
-                  <MenuItem fx:id="writable" mnemonicParsing="false" onAction="#writable" text="writable" />
-               </items>
-            </Menu>
 
-
-         </menus>
-      </MenuBar>
       <GridPane layoutX="35.0" layoutY="49.0" prefHeight="31.0" prefWidth="324.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="255.10995483398438" minWidth="0.0" prefWidth="66.0" />
@@ -40,5 +29,6 @@
          </children>
       </GridPane>
       <TextArea fx:id="context" layoutX="35.0" layoutY="89.0" prefHeight="377.0" prefWidth="728.0" />
+      <Button fx:id="save" layoutX="450.0" layoutY="53.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="76.0" text="保存" />
    </children>
 </AnchorPane>
