--- a/src/sample/alert.fxml
+++ b/src/sample/alert.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Alert">
    <children>
-      <Label layoutX="43.0" layoutY="60.0" text="The file name already exists !">
+      <Label layoutX="43.0" layoutY="60.0" text="文件名已经存在！">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
